Fixed overlapping footer, #1216

--- a/src/app/footer-navbar/footer-navbar.component.css
+++ b/src/app/footer-navbar/footer-navbar.component.css
@@ -8,6 +8,8 @@
   justify-content: space-between;
   align-items: center;
   margin-bottom: 0px;
+  position: fixed;
+  bottom: 0px;
 }
 footer {
   position: fixed;
