--- a/src/app/newadvancedsearch/newadvancedsearch.component.css
+++ b/src/app/newadvancedsearch/newadvancedsearch.component.css
@@ -59,6 +59,7 @@
   font-size: 11px;
   text-align: center;
   font-weight: bold;
+  margin-bottom: 50px;
 }
 
 .navbar-right {
